# DIMT_clone

./: DEPLOYMENT.md  README.md  pyproject.toml  report_v2.tex
config/: inference.yaml
data/: test.jsonl  val.jsonl
src/backend/: agent.py  api.py  evaluation.py  latex_renderer.py  marianmt_service.py  math_render.js  mineru_client.py  mongo_store.py  nllb_service.py  pdf_renderer.py
src/frontend/: app.py
src/test/: test_batched_concatenation.py  test_equation_protection.py  test_nllb_2.py
