[project]
name = "dimt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "evidently>=0.7.21",
    "fastapi>=0.136.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "levenshtein>=0.27.3",
    "matplotlib>=3.9.0",
    "mlflow>=3.11.1",
    "peft==0.13.2",
    "psutil>=5.9.0",
    "pymongo>=4.6.0",
    "pymupdf==1.24.11",
    "pymupdf-fonts>=1.0.5",
    "pytest>=8.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "protobuf==5.28.2",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.56.0",
    "tenacity>=8.2.0",
    "tokenizers==0.20.3",
    "torch",
    "torchvision",
    "transformers==4.46.3",
    "transformers-stream-generator>=0.0.5",
    "typst>=0.11.0",
    "uvicorn>=0.44.0",
    "google-genai>=0.3.0",
    "wikipedia",
    "langchain-community>=0.4.1",
    "sentencepiece"
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
